--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,109 +1,56 @@
+.table-container {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 table {
-    width: 100%;
-    margin-bottom: 1rem;
-    background-color: #fff;
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-  
-  th,
-  td {
-    padding: 0.75rem;
-    vertical-align: top;
-    border-top: 1px solid #dee2e6;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #006400;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  tr:hover {
-    background-color: #ddd;
-  }
-  
-  th:first-child,
-  td:first-child {
-    border-left: 1px solid #dee2e6;
-  }
-  
-  th:last-child,
-  td:last-child {
-    border-right: 1px solid #dee2e6;
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #000;
-    color: #fff;
-  }
-  
-  tr:nth-child(odd):hover {
-    background-color: #8b0000;
-    color: #fff;
-  }
-  
-  .table-responsive {
-    display: block;
-    width: 100%;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    -ms-overflow-style: -ms-autohiding-scrollbar;
-  }
-  
-  @media (max-width: 575.98px) {
-    .table-responsive {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-      -ms-overflow-style: -ms-autohiding-scrollbar;
-    }
-  
-    .table-responsive thead,
-    .table-responsive tbody,
-    .table-responsive th,
-    .table-responsive td,
-    .table-responsive tr {
-      display: block;
-    }
-  
-    .table-responsive td,
-    .table-responsive th {
-      height: 35px;
-    }
-  
-    .table-responsive thead th {
-      text-align: center;
-      height: 40px;
-      line-height: 40px;
-    }
-  
-    .table-responsive tbody tr {
-      margin-bottom: 15px;
-    }
-  
-    .table-responsive tbody td {
-      text-align: center;
-      border-bottom: 1px solid #eee;
-      position: relative;
-      padding-left: 50%;
-    }
-  
-    .table-responsive tbody td:before {
-      position: absolute;
-      top: 6px;
-      left: 6px;
-      width: 45%;
-      padding-right: 10px;
-      white-space: nowrap;
-      content: attr(data-label);
-      font-weight: bold;
-    }
-  }
-  
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: #fff;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+thead {
+  position: sticky;
+  top: 0;
+  background-color: maroon; /* Changed to maroon red */
+}
+
+th,
+td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+  text-align: left;
+  font-family: Arial, sans-serif;
+}
+
+th {
+  background-color: maroon; /* Changed to maroon red */
+  color: #fff;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+th:first-child,
+td:first-child {
+  border-left: 1px solid #dee2e6;
+}
+
+th:last-child,
+td:last-child {
+  border-right: 1px solid #dee2e6;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+  color: #000;
+}
+
+tr:hover {
+  background-color: #f2f2f2;
+}
