--- a/src/app/elected/elected.component.scss
+++ b/src/app/elected/elected.component.scss
@@ -1,61 +1,56 @@
 .table-container {
-    max-height: 400px; /* Adjust the desired height */
-    overflow-y: auto;
-  }
-  
-  table {
-    width: 100%;
-    margin-bottom: 1rem;
-    background-color: #fff;
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-  
-  thead {
-    position: sticky;
-    top: 0;
-    background-color: #f2f2f2;
-  }
-  
-  th,
-  td {
-    padding: 0.75rem;
-    vertical-align: top;
-    border-top: 1px solid #dee2e6;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #006400;
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  tr:hover {
-    background-color: #ddd;
-  }
-  
-  th:first-child,
-  td:first-child {
-    border-left: 1px solid #dee2e6;
-  }
-  
-  th:last-child,
-  td:last-child {
-    border-right: 1px solid #dee2e6;
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #000;
-    color: #fff;
-  }
-  
-  tr:nth-child(odd):hover {
-    background-color: #8b0000;
-    color: #fff;
-  }
-  
+  max-height: 400px;
+  overflow-y: auto;
+}
+
+table {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: #fff;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+thead {
+  position: sticky;
+  top: 0;
+  background-color: maroon; /* Changed to maroon red */
+}
+
+th,
+td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+  text-align: left;
+  font-family: Arial, sans-serif;
+}
+
+th {
+  background-color: maroon; /* Changed to maroon red */
+  color: #fff;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+th:first-child,
+td:first-child {
+  border-left: 1px solid #dee2e6;
+}
+
+th:last-child,
+td:last-child {
+  border-right: 1px solid #dee2e6;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+  color: #000;
+}
+
+tr:hover {
+  background-color: #f2f2f2;
+}
