--- a/src/app/partiestable/partiestable.component.html
+++ b/src/app/partiestable/partiestable.component.html
@@ -1,30 +1,19 @@
 <div class="table-container">
     <table>
-        <thead>
+      <thead>
         <tr>
-            <th>Short Name (English)</th>
-            <th>Party ID</th>
-            <th>Name (English)</th>
-            <th>Party Colour</th>
-            <th>Short Name (French)</th>
-            <th>Fringe Party</th>
-            <th>Name (French)</th>
-            <th>Major Party</th>
+          <th>Party Name (English)</th>
+          <th>Party ID</th>
+          <th>Party Name (French)</th>
         </tr>
-        </thead>
-        <tbody>
-            <ng-container *ngFor="let party of parties; let i = index">
-                <tr>
-                    <td>{{ party.ShortName_En }}</td>
-                    <td>{{ party.PartyID }}</td>
-                    <td>{{ party.Name_En }}</td>
-                    <td>{{ party.party_colour }}</td>
-                    <td>{{ party.ShortName_Fr }}</td>
-                    <td>{{ party.FringeParty }}</td>
-                    <td>{{ party.Name_Fr }}</td>
-                    <td>{{ party.MajorParty }}</td>
-                </tr>
-            </ng-container>
-        </tbody>
+      </thead>
+      <tbody>
+        <tr *ngFor="let party of parties">
+          <td>{{ party.partyName }}</td>
+          <td>{{ party.partyId }}</td>
+          <td>{{ party.partyNom }}</td>
+        </tr>
+      </tbody>
     </table>
-</div>    
+  </div>
+  
