--- a/src/app/districtcandidates/districtcandidates.component.scss
+++ b/src/app/districtcandidates/districtcandidates.component.scss
@@ -1,57 +1,100 @@
 .table-container {
-    max-height: 400px;
-    overflow-y: auto;
+  max-height: 400px;
+  overflow-y: auto;
+
+  select {
+    font-size: 20px; /* Adjust the font size as per your preference */
   }
-  
-  table {
-    width: 100%;
-    margin-bottom: 1rem;
-    background-color: #fff;
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-  
-  thead {
-    position: sticky;
-    top: 0;
-    background-color: maroon; /* Changed to maroon red */
-  }
-  
-  th,
-  td {
-    padding: 0.75rem;
-    vertical-align: top;
-    border-top: 1px solid #dee2e6;
-    text-align: left;
-    font-family: Arial, sans-serif;
-  }
-  
-  th {
-    background-color: maroon; /* Changed to maroon red */
-    color: #fff;
-    font-weight: bold;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  
-  th:first-child,
-  td:first-child {
-    border-left: 1px solid #dee2e6;
-  }
-  
-  th:last-child,
-  td:last-child {
-    border-right: 1px solid #dee2e6;
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #fff;
-    color: #000;
-  }
-  
-  tr:hover {
-    background-color: #f2f2f2;
-  }
-  
+}
+
+table {
+  width: 100%;
+  margin-bottom: 1rem;
+  background-color: #fff;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+thead {
+  position: sticky;
+  top: 0;
+  background-color: maroon; /* Changed to maroon red */
+}
+
+th,
+td {
+  padding: 0.75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+  text-align: left;
+  font-family: Arial, sans-serif;
+}
+
+th {
+  background-color: maroon; /* Changed to maroon red */
+  color: #fff;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+th:first-child,
+td:first-child {
+  border-left: 1px solid #dee2e6;
+}
+
+th:last-child,
+td:last-child {
+  border-right: 1px solid #dee2e6;
+}
+
+tr:nth-child(odd) {
+  background-color: #fff;
+  color: #000;
+}
+
+tr:hover {
+  background-color: #f2f2f2;
+}
+
+select {
+  font-size: 16px; /* Adjust the font size as per your preference */
+}
+
+.district-row {
+  display: flex;
+  align-items: center;
+}
+
+.district-number {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.arrow {
+  cursor: pointer;
+}
+
+.arrow-icon {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  transform: rotate(-45deg);
+  transition: transform 0.3s;
+}
+
+.arrow-down {
+  transform: rotate(45deg);
+}
+
+.candidate-list {
+  display: none;
+}
+
+.candidate-list.active {
+  display: block;
+}
