--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,3 +9,32 @@
     padding: 0 10px;
   }
   
+h1{
+  font-family: 'Lato', Arial, sans-serif;
+  font-weight:bold;
+  font-style:normal;
+  padding-left: 3rem;
+}
+h2{
+  
+    font-family: 'Lato', Arial, sans-serif;
+    font-weight:bold;
+    font-style:normal;
+    
+  
+}
+  
+ h4,th,tr,tbody {
+    
+      font-family: 'Lato-Regular', Arial, sans-serif;
+      font-weight:normal;
+      font-style:normal;
+      text-align: center;
+  
+  }
+
+  .table-container {
+    padding: 50px;
+    width: 75%;
+    flex: wrap;
+  }
